# erAL

./: .gitignore  README.md  config.ini  pyproject.toml
data/base/: abl_upgrade.toml  appearances.toml  calendar.toml  character_relations.toml  characters.toml  commands.toml  commissions.toml  dialogue.toml  events.toml  facilities.toml  gifts.toml  imprint_thresholds.toml  items.toml  marks.toml  maxbase.toml  palam_decay.toml  skins.toml  (+11 more)
docs/: AI_LONG_TERM_VIBE_GUIDE.md  COMMAND_MIGRATION.md  LONG_TERM_DEV.md  PRD.md  README.md  TODO.md  TODO_OLD.md  TW公式迁移策略.md  architecture-plan.md  玩家体验映射.md  系统清单.md
scripts/: add_abl_exp.py
tests/: __init__.py  test_14day_combined.py  test_abl_upgrade.py  test_after_date_events.py  test_ambient_events.py  test_bootstrap.py  test_calendar_command.py  test_character_pack_stat_files.py  test_character_packs.py  test_character_relations.py  test_character_stats_loader.py  test_cli_selection.py  test_cli_shop.py  test_command_effects.py  test_command_gates.py  test_command_schema.py  test_commands.py  test_commission_system.py  test_companions.py  test_compat_semantics.py  test_content_loading.py  test_date_commands.py  test_dates.py  test_dialogue.py  test_distribution.py  test_e2e_date_line.py  test_economic_loop.py  test_ejaculation.py  test_events.py  test_facilities.py  test_gift_system.py  test_golden_path.py  test_import_resolution.py  test_initial_stats.py  test_mark_branching.py  test_marks.py  test_memory.py  test_multi_character_regression.py  test_navigation.py  test_palam_decay.py  (+27 more)
tools/: extract_command_sources.py
(+261 files in other folders)
